# slsa-example

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: continuous-integration.yaml
src/simpleapp/: __init__.py
