[tool.poetry]
name = "simpleapp"
version = "0.1.0"
description = ""
authors = ["aquint-zama <alexandre.quint@zama.ai>"]
readme = "README.md"
packages = [{include = "simpleapp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
